--- a/water-my-plants/public/index.html
+++ b/water-my-plants/public/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="path/to/notifications.css">
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
