--- a/water-my-plants/public/index.html
+++ b/water-my-plants/public/index.html
@@ -17,6 +17,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="path/to/notifications.css">
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
+    />
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
